hooks-ocp/templates/rc-aspnet-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: rcaspnethelmocp
  name: rcaspnethelmocp
  namespace: rc-namespace
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: rcaspnethelmocp
---
