hooks-ocp/templates/rc-aspnet-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    app: rcaspnethelmocp
  name: rcaspnethelmocp
  namespace: rc-namespace
spec:
  host: ""
  port:
    targetPort: 8080
  to:
    kind: Service
    name: rcaspnethelmocp
    weight: 100
status:
  ingress:
  - conditions:
    - status: "True"
      type: Admitted
